OAK-10680: tests failures with com.arakelian/docker-junit-rule
Now using Testcontainers instead of com.arakelian:docker-junit-rule.